[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "picen"
description = "Picture encryption and decryption"
version = "0.2"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Taymaz Khormali", email = "TaymazKH.U@gmail.com" }]
classifiers = [
#    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
#dependencies = [
#    "colorama; platform_system == 'Windows'",
#    "importlib-metadata; python_version < '3.8'",
#]


[project.urls]
"Homepage" = "https://github.com/TaymazKH/picen"
